# protocol-substrate

./: .dockerignore  .envrc  .gitignore  .gitmodules  Cargo.toml  README.md  crates.js  flake.nix  help.html  index.html  rust-toolchain  rust-toolchain.toml  rustfmt.toml  search-index.js  settings.html  solidity-fixtures.dvc  source-files.js  substrate-fixtures.dvc
.devcontainer/: devcontainer.json
.dvc/: config
.github/: PULL_REQUEST_TEMPLATE.md
.maintain/: webb-weight-template.hbs
circom-proving/: Cargo.toml
circom-proving/src/: lib.rs
client/: Cargo.toml
client/metadata/: protocol_substrate_runtime.scale  webb_metadata.scale
client/src/: lib.rs
client/tests/: integration_tests.rs  utils.rs
common/: Cargo.toml
doc/: parachain-local.md
docker/: Coverage.Dockerfile  Standalone.Dockerfile  readme.md  standalone-docker-compose.yml
fixtures/: zk_config.rs
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  command.rs  rpc.rs  service.rs
pallet_anonymity_mining_claims/: all.html  index.html  type.BalanceOf.html  type.CurrencyIdOf.html
pallet_anonymity_mining_rewards/: all.html  index.html  sidebar-items.js  type.BalanceOf.html  type.CurrencyIdOf.html
pallet_asset_registry/: all.html  enum.AssetType.html  index.html  sidebar-items.js  (+2 more)
pallets/anchor/: Cargo.toml
pallets/anchor-handler/: Cargo.toml
pallets/anchor-handler/src/: lib.rs  mock.rs  mock_bridge.rs  mock_signature_bridge.rs  tests.rs  tests_bridge.rs  tests_signature_bridge.rs  types.rs
pallets/anchor/src/: benchmarking.rs  lib.rs  mock.rs  test_utils.rs  tests.rs  types.rs  weights.rs  zk_config.rs
pallets/anchor/zk-setup/: Cargo.toml
pallets/anchor/zk-setup/src/: main.rs
pallets/anonymity-mining/: Cargo.toml
pallets/anonymity-mining-claims/: Cargo.toml  circom_vk_2_2_bytes  circuitInput.json  proof_data  secondTransactionInputs.json
pallets/anonymity-mining-claims/src/: benchmarking.rs  benchmarking_utils.rs  lib.rs  mock.rs  test_utils.rs  tests.rs
pallets/anonymity-mining/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
pallets/asset-registry/: Cargo.toml
pallets/asset-registry/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  traits.rs  types.rs  weights.rs
pallets/assets/: Cargo.toml
pallets/bridge/: Cargo.toml
pallets/bridge/src/: lib.rs  mock.rs  tests.rs  types.rs  utils.rs
pallets/chainbridge/: Cargo.toml
pallets/chainbridge/src/: lib.rs  mock.rs  tests.rs
pallets/claims-verifier/: Cargo.toml
pallets/claims-verifier/src/: benchmarking.rs  lib.rs  mock.rs
pallets/hasher/: Cargo.toml
pallets/hasher/src/: benchmarking.rs  constants.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/hello/: Cargo.toml
pallets/hello/src/: lib.rs
pallets/key-storage/: Cargo.toml
pallets/key-storage/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/linkable-tree/: Cargo.toml
pallets/linkable-tree/rpc/: Cargo.toml
pallets/linkable-tree/rpc/runtime-api/: Cargo.toml
pallets/linkable-tree/rpc/runtime-api/src/: lib.rs
pallets/linkable-tree/rpc/src/: error.rs  lib.rs
pallets/linkable-tree/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
pallets/mixer/: Cargo.toml
pallets/mixer/src/: benchmarking.rs  lib.rs  mock.rs  test_utils.rs  tests.rs  types.rs  weights.rs  zk_config.rs
pallets/mixer/zk-setup/: Cargo.toml
pallets/mixer/zk-setup/src/: main.rs
pallets/mt/: Cargo.toml
pallets/mt/rpc/: Cargo.toml
pallets/mt/rpc/runtime-api/: Cargo.toml
pallets/mt/rpc/runtime-api/src/: lib.rs
pallets/mt/rpc/src/: error.rs  lib.rs
pallets/mt/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
pallets/relayer-registry/: Cargo.toml
pallets/relayer-registry/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
pallets/signature-bridge/: Cargo.toml
pallets/signature-bridge/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  utils.rs  weights.rs
pallets/token-wrapper/: Cargo.toml
pallets/token-wrapper-handler/: Cargo.toml
pallets/token-wrapper-handler/src/: lib.rs  mock.rs  mock_bridge.rs  mock_signature_bridge.rs  tests.rs  tests_bridge.rs  tests_signature_bridge.rs
pallets/token-wrapper/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  traits.rs  weights.rs
pallets/vanchor/: Cargo.toml  calldata.json
pallets/vanchor-handler/: Cargo.toml
pallets/vanchor-handler/src/: lib.rs  mock_bridge.rs  mock_signature_bridge.rs  tests_bridge.rs  tests_signature_bridge.rs
pallets/vanchor-verifier/: Cargo.toml
pallets/vanchor-verifier/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/vanchor/src/: benchmarking.rs  benchmarking_utils.rs  lib.rs  mock.rs  proof_error.rs  test_utils.rs  tests.rs  tests_circom.rs  types.rs  weights.rs  zerokit_utils.rs  zk_config.rs
pallets/vanchor/tmp/: circuit_0000.zkey  circuit_0001.zkey  circuit_final.zkey  test.circom  test.r1cs  test.sym  verification_key.json
pallets/vanchor/tmp/test_js/: test.wasm
primitives/: Cargo.toml
primitives/src/: hasher.rs  lib.rs  runtime.rs  types.rs  utils.rs  verifier.rs
primitives/src/field_ops/: arkworks.rs
primitives/src/hashing/: arkworks.rs  ethereum.rs  mod.rs
primitives/src/proving/: circom_prover.rs  mod.rs
primitives/src/signing/: ecdsa.rs  mod.rs
primitives/src/traits/: anchor.rs  key_storage.rs  linkable_tree.rs  merkle_tree.rs  mixer.rs  mod.rs  proposals.rs  signature_bridge.rs  vanchor.rs
primitives/src/types/: anonymity_mining.rs  mod.rs  runtime.rs  vanchor.rs
primitives/src/verifying/: arkworks.rs  circom.rs  ethereum_circom.rs  mod.rs
runtime/: Cargo.toml  build.rs
runtime/src/: constants.rs  lib.rs
runtime/src/weights/: pallet_collator_selection.rs  pallet_proxy.rs  pallet_timestamp.rs  pallet_uniques.rs
tests/: Cargo.toml
tests/metadata/: webb_metadata.scale
tests/src/: main.rs  proof.rs  utils.rs
webb-primitives/: Cargo.toml
webb-primitives/src/: lib.rs  mmr.rs
webb-primitives/src/dkg/: keystore.rs  mod.rs
webb-primitives/tests/: basic_lc_operations.rs
webb-primitives/tests/light_client/: mod.rs  validator_set.rs
(+3083 files in other folders)
