[profile.release]
panic = "unwind"
codegen-units = 1

[workspace]
members = [
	"client",
	"primitives",
	"pallets/anonymity-mining",
	"pallets/asset-registry",
	"pallets/hasher",
	"pallets/verifier",
	"pallets/mt",
	"pallets/linkable-tree",
	"pallets/mixer",
	"pallets/signature-bridge",
	"pallets/vanchor",
	"pallets/vanchor-handler",
	"pallets/vanchor-verifier",
	# "pallets/xanchor",
	"pallets/token-wrapper",
	"pallets/token-wrapper-handler",
	"pallets/relayer-registry",
	"pallets/key-storage",
	"standalone/*",
]