[profile.release]
lto = "thin"
panic = "unwind"
strip = "symbols"

[profile.dev]
debug = 0
strip = "symbols"

[workspace]
members = [
  "client",
  "primitives",
  "pallets/anonymity-mining-rewards",
  "pallets/anonymity-mining-claims",
  "pallets/claims-verifier",
  "pallets/asset-registry",
  "pallets/masp-asset-registry-handler",
  "pallets/hasher",
  "pallets/verifier",
  "pallets/mt",
  "pallets/linkable-tree",
  "pallets/mixer",
  "pallets/signature-bridge",
  "pallets/vanchor",
  "pallets/vanchor-handler",
  "pallets/vanchor-verifier",
  # "pallets/xanchor",
  "pallets/token-wrapper",
  "pallets/token-wrapper-handler",
  "pallets/relayer-registry",
  # "pallets/registry-handler",
  "pallets/key-storage",
  "standalone/*",
  "circom-proving",
]
