[package]
edition = "2021"
name = "webb-client"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive", "full", "bit-vec"] }
subxt = { version = "0.25.0" }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }

[dev-dependencies]
hex = "0.4"
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.119" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
sp-keyring = { default-features = false, version = "7.0.0" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
tokio = { version = "1.17.0", features = ["full"] }

# arkworks related deps
ark-bls12-381 = { version = "^0.3.0", default-features = false, features = ["curve"] }
ark-bn254 = { version = "^0.3.0", default-features = false, features = ["curve"] }
ark-crypto-primitives = { version = "^0.3.0", features = ["r1cs"], default-features = false }
ark-ec = { version = "^0.3.0", default-features = false }
ark-ff = { version = "^0.3.0", default-features = false }
ark-relations = { version = "^0.3.0", default-features = false }
ark-serialize = { version = "^0.3.0", default-features = false, features = ["derive"] }
ark-std = { version = "^0.3.0", default-features = false }
ark-circom = { git = "https://github.com/gakonst/ark-circom", branch = "master", default-features = false, features = ["circom-2"] }
ark-groth16 = { git = "https://github.com/arkworks-rs/groth16", rev = "765817f", features = ["parallel"] }
rand = "0.8.4"
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
pallet-balances = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", branch = "polkadot-v0.9.36", default-features = false }
orml-currencies = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", branch = "polkadot-v0.9.36", default-features = false }
arkworks-setups = { version = "1.2.1", features = ["r1cs"], default-features = false }
num-bigint = { version = "0.4", default-features = false, features = ["rand"] }
frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
# For ark-circom
once_cell = "1.14.0"
cfg-if = "1.0"
wasmer = { version = "2.3.0", default-features = false }
num-traits = "0.2.11"
thiserror = "1.0.0"
color-eyre = "0.6.1"
serde_json = "1.0.48"


# Webb deps
arkworks-native-gadgets = { version = "1.2.0", default-features = false }
webb-primitives = { path = "../primitives", features = ["hashing", "verifying", "field_ops"] }

[features]
default = ["std", "wasmer/sys-default"]
std = [
    "frame-support/std",
    "frame-system/std",
    "frame-benchmarking/std",
]
runtime-benchmarks = [
    "frame-system/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
]
wasm = ["wasmer/js", "wasmer/std"]