[package]
authors = ["Webb Technologies Inc."]
build = "build.rs"
description = "A fresh FRAME-based Substrate node, ready for hacking."
edition = "2018"
homepage = "https://substrate.dev"
license = "Unlicense"
name = "webb-node"
repository = "https://github.com/webb-tools/protocol-substrate/"
version = "1.0.0"

[[bin]]
name = "webb-node"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-build-script-utils = "3.0.0"

[dependencies]
futures = { version = "0.3.1", features = ["compat"] }
log = "0.4.8"
codec = { package = "parity-scale-codec", version = "2.3.0" }
structopt = "0.3.3"
serde = { version = "1.0.101", features = ["derive"] }
hex-literal = "0.2.1"
async-trait = "0.1.42"

pallet-mt = { path = "../pallets/mt", version = "1.0.0" }
pallet-mt-rpc = { path = "../pallets/mt/rpc", version = "0.1.0" }
pallet-mt-rpc-runtime-api = { path = "../pallets/mt/rpc/runtime-api" }
pallet-parachain-staking = { path = "../pallets/parachain-staking", version = "1.0.0" }
webb-primitives = { path = "../primitives" }
common = { path = "../common" }

# Parachain runtimes
webb-runtime = { path = "../runtime", version = "0.1.0" }
shell-runtime = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.17" }
try-runtime-cli = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }

# Substrate dependencies
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }

# RPC related dependencies
jsonrpc-core = "18.0.0"
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }

# Cumulus dependencies
cumulus-client-cli = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.17" }
cumulus-client-collator = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.17" }
cumulus-client-consensus-aura = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.17" }
cumulus-client-consensus-common = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.17" }
cumulus-client-network = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.17" }
cumulus-client-service = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.17" }
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.17" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.17" }
cumulus-client-consensus-relay-chain = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.17" }
cumulus-relay-chain-interface = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.17" }
cumulus-relay-chain-local = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.17" }

# Polkadot dependencies
polkadot-cli = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.17" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.17" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.17" }
polkadot-service = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.17" }
polkadot-test-service = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.17" }

arkworks-setups = { version = "1.0.0", features = ["r1cs"], default-features = false }
# arkworks-setups = { path = "../../arkworks-gadgets/arkworks-setups", default-features = false, features = ["r1cs"] }
arkworks-native-gadgets = { version = "1.0.0", default-features = false }
# arkworks-native-gadgets = { path = "../../arkworks-gadgets/arkworks-native-gadgets", default-features = false }

ark-std = { version = "^0.3.0", default-features = false }
ark-serialize = { version = "^0.3.0", default-features = false }
ark-bn254 = { version = "^0.3.0", default-features = false, features = [ "curve" ] }
ark-bls12-381 = { version = "^0.3.0", default-features = false, features = [ "curve" ] }

[features]
default = []
runtime-benchmarks = [
  "polkadot-service/runtime-benchmarks",
  "webb-runtime/runtime-benchmarks",
]
