[package]
name = "webb-primitives"
version = "0.1.0"
authors = ["Drew Stone <drewstone329@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.119", optional = true, features = ["derive"] }
codec = { default-features = false, features = ["derive", "max-encoded-len"], package = "parity-scale-codec", version = "3" }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
sp-consensus-aura = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
sp-consensus-babe = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }

# Arkworks
ark-ff = { version = "^0.3.0", default-features = false }
ark-ec = { version = "^0.3.0", default-features = false }
ark-std = { version = "^0.3.0", default-features = false }
ark-relations = { version = "^0.3.0", default-features = false }
ark-serialize = { version = "^0.3.0", default-features = false, features = [ "derive" ] }
ark-bls12-381 = { version = "^0.3.0", default-features = false, features = [ "curve" ], optional = true }
ark-bls12-377 = { version = "^0.3.0", default-features = false, features = [ "curve", "r1cs" ], optional = true }
ark-bn254 = { version = "^0.3.0", default-features = false, features = [ "curve" ], optional = true }
ark-groth16 = { version = "^0.3.0", default-features = false }

blake2 = { version = "0.9", default-features = false }
digest = { version = "0.9", default-features = false }

ark-crypto-primitives = { version = "^0.3.0", default-features = false }
arkworks-native-gadgets = { version = "1.0.0", default-features = false, optional = true }

ethabi = { version = "15.0.0", default-features = false }
hex-literal = { version = "0.3.4", default-features = false }

webb-proposals = { version = "0.5.4", default-features = false, features = ["scale", "substrate", "evm"] }
# webb-proposals = { git = "https://github.com/webb-tools/webb-rs", branch = "drew/update-substrate-proposals", default-features = false, features = ["scale", "substrate", "evm"] }
# webb-proposals = { path = "../../webb-rs/proposals", default-features = false, features = ["scale", "substrate", "evm"] }

[features]
default = ["std", "hashing", "verifying", "field_ops"]
std = [
	"serde",
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"sp-core/std",
	"sp-std/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-consensus-aura/std",
	"sp-consensus-babe/std",
	"ark-ff/std",
	"ark-ec/std",
	"ark-std/std",
	"ark-relations/std",
	"webb-proposals/std"
]
field_ops = [
	"ark-bls12-381",
	"ark-bls12-377",
	"ark-bn254",
]
hashing = [
	"arkworks-native-gadgets",
	"ark-bls12-381",
	"ark-bls12-377",
	"ark-bn254",
]
verifying = [
	"arkworks-native-gadgets",
	"ark-bls12-381",
	"ark-bls12-377",
	"ark-bn254",
]
